fixed typo in quiz doc

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
             <span id="question">[Press button to start the Quiz]</span></p>
             <p><strong>Answer:</strong>
             <input type="text" name="answer" id="answer" /></p>
-            <p><input type="button" value="Submit Answer" id="Submit" /></p>
+            <p><input type="button" value="Submit Answer" id="submit" /></p>
         </form>
         <script type="text/javascript" src="quiz.js"></script>
     </body>
